# addonfactory-splunk-conf-parser-lib

./: .fossa.yml  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .releaserc  README.md  addonfactory_splunk_conf_parser_lib.py  conf_parser.py  pyproject.toml  test_addonfactory_splunk_conf_parser_lib.py  test_conf_parser.py
.github/: CODEOWNERS
.github/workflows/: agreements.yaml  build-test-release.yml  build-test.yml  release-notes.yaml  test-report.yml
testdata/: test.conf
