#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "addonfactory_splunk_conf_parser_lib"
version = "0.3.3"
description = "Splunk .conf files parser"
authors = ["Splunk <addonfactory@splunk.com>"]

readme = "README.md"

repository = "https://github.com/splunk/addonfactory-splunk-conf-parser-lib"
homepage = "https://github.com/splunk/addonfactory-splunk-conf-parser-lib"

keywords = ["splunk"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
